Fixed some responsiveness issues on mobile

--- a/style.css
+++ b/style.css
@@ -42,15 +42,25 @@ a:active {
   padding: 30px 0;
 }
 
+/*Margin*/
+.margin-700-bottom {
+  margin-bottom: 700px;
+}
+
 /*Cards*/
 .card {
-  padding: 350px 0;
+  padding: 50px 10px;
 }
-.card-100 {
-  padding: 100px 0;
+.card-top {
+  padding: 150px 10px;
+  line-height: 2;
 }
 .card-white {
   background-color: #FFFDFD;
+}
+.card-blue {
+  background-color: #0B3C49;
+  color: #FFFDFD;
 }
 
 /*Buttons*/
@@ -88,4 +98,7 @@ a:active {
 /*Text*/
 .text-purple{
   color: #731963;
+}
+.text-green{
+  color: #F0E100;
 }
